name:                haspik
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/serbe/haspik#readme
license:             BSD3
license-file:        LICENSE
author:              Valeriy Kostikov
maintainer:          mkoctuk@gmail.com
copyright:           Copyright: (c) 2017 Valeriy Kostikov
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable haspik-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , haspik
  default-language:    Haskell2010

test-suite haspik-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , haspik
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/serbe/haspik
